# skills-agent-proto

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  skill_introduce.md  start.sh
.claude/: settings.local.json
examples/: interactive_chat.py  langchain_demo.py
scripts/: DEPRECATED.md  README_MYSQL.md  init_all.py  init_database.sql  reset_database.sql  verify_checkpoint.py
src/langchain_skills/: agent.py  cli.py  skill_loader.py  tools.py  web_api.py
src/langchain_skills/checkpoint/: __init__.py  config.py  factory.py
src/langchain_skills/storage/: __init__.py  message_store.py
src/langchain_skills/stream/: emitter.py  tracker.py
tests/: test_stream.py  test_web_api.py
tests/test_checkpoint/: __init__.py
web/: README.md
web/src/: App.css  App.tsx
web/src/components/: ChatTimeline.tsx  Composer.tsx  SessionPanel.tsx  SkillPanel.tsx  ToolCallItem.tsx
web/src/lib/: sse.ts
web/src/state/: chatReducer.test.ts  chatReducer.ts
web/src/types/: events.ts
